[gd_scene load_steps=3 format=2]

[ext_resource path="res://levels/Battle/Battle.gd" type="Script" id=1]
[ext_resource path="res://models/gui/BattleLifeBar/BattleLifeBar.tscn" type="PackedScene" id=2]

[node name="Battle" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 436, 144 )

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 128, 336 )

[node name="BattleLifeBarPlayer" parent="." instance=ExtResource( 2 )]
margin_left = 312.0
margin_top = 320.0
margin_right = 536.0
margin_bottom = 332.0

[node name="BattleLifeBarEnemy" parent="." instance=ExtResource( 2 )]
margin_left = 64.0
margin_top = 72.0
margin_right = 288.0
margin_bottom = 84.0
